--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -62,3 +62,47 @@ h1, h2, h3, h4, h5 {
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
+.container{
+	position: relative;
+	left: 60px
+}
+header nav a {
+    display: inline-block;
+	margin: 50px;
+	color: gray;
+    cursor: pointer;
+	text-decoration: none;
+
+}
+.logo{
+	position: absolute;
+    right: 275px;
+    top: 55px;
+    vertical-align: text-top;
+
+}
+.cta-text{
+	position: absolute;
+	top:100px;
+	font-size:100px;
+	left:150px;
+	align:center;
+
+}
+.cta{
+	margin-left: 750px;
+}
+
+}
+.cta button{
+	position: relative;
+	top:0px;
+	left:100px;
+	border:1px solid black;
+	width:180px;
+	padding: 10px;
+	-webkit-appearance: none;
+	background-color: white;
+	font:400 13.3333px Calibri;
+
+}
